--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,9 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+        
+        <div>
+            <p>Description de ma personne<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis augue nisl. Donec nisi elit, sollicitudin non consequat vel, maximus ut nulla. Aliquam dolor nunc, ultrices ut suscipit at, convallis eu libero. Sed at pulvinar mauris. Mauris et sodales nisi. Duis sit amet faucibus dolor, quis mattis nibh. Curabitur pretium eros a lorem dapibus congue. Aenean eu dolor placerat, fermentum tellus in, feugiat dui. Curabitur vehicula ligula id magna pulvinar fermentum. Donec interdum ullamcorper tortor. Aliquam vestibulum orci quam, non tincidunt nibh dictum at. Ut ante tortor, posuere a maximus et, porta hendrerit tellus. Aliquam tempor tristique metus, quis pellentesque est laoreet non. Nulla efficitur fringilla aliquet. Praesent vehicula, augue nec mollis facilisis, magna eros placerat nulla, vehicula aliquet nulla purus sed nunc.</p>
+        </div>
 		
-	
 </body></html>
